# SSVM

./: CMakeLists.txt
doc/witx/: typenames.witx  wasi_ephemeral_sock.witx
include/api/: ssvm.h
include/ast/: base.h  segment.h
include/common/: defines.h  version.h.in
include/plugin/: plugin.h
include/runtime/: storemgr.h
lib/: CMakeLists.txt
lib/aot/: CMakeLists.txt  compiler.cpp
lib/api/: CMakeLists.txt  ssvm.cpp
lib/ast/: description.cpp  instruction.cpp  module.cpp  segment.cpp  type.cpp
lib/host/wasi/: CMakeLists.txt
lib/interpreter/: helper.cpp  interpreter.cpp
lib/interpreter/engine/: proxy.cpp
lib/plugin/: CMakeLists.txt  plugin.cpp
lib/vm/: vm.cpp
test/aot/: AOTcoreTest.cpp
test/interpreter/: InterpreterTest.cpp
test/spec/: spectest.cpp  spectest.h
tools/ssvm/: ssvmr.cpp
