# SPDX-License-Identifier: Apache-2.0
add_subdirectory(ast)
if (NOT SSVM_DISABLE_AOT_RUNTIME)
  add_subdirectory(aot)
endif()
add_subdirectory(interpreter)
add_subdirectory(vm)
if (NOT SSVM_DISABLE_HOST_FUNCTIONS)
  add_subdirectory(host)
endif()
add_subdirectory(loader)
add_subdirectory(support)
add_subdirectory(validator)
